Changes in Version 0.9.1:
  - ml_tsdlvm1 now orders data by idvar if beepvar is not supplied.
  - Added 'CIplot' function
  - Standardizing in ts_dlvm1 is now more stable.

Changes in Version 0.9:
  - Changed 'rel.tol=1e-10' in the nlminb optimizer to be in line with lavaan
  - Added 'warn_improper' argument to runmodel(..)
  - The argument 'return_improper' now defaults to TRUE
  - Optimizer no longer uses a spectral shift when inverting a semi-positive definite matrix
  - Detection of non positive definite matrices is now done faster and should lead to less problems
  - The default optimizer is now cpp_L-BFGS-B!
  - Added the 'bounded' argument to runmodel() to define if bounded estimation should be used (defaults to TRUE)
  - Diagonals of symmetrical matrices can no longer be estimated to be negative (avoiding Heywood cases, although doing this with a Cholesky decomposition is nicer!)
  
Changes in Version 0.8.1:
  - The nlminb estimator now uses more iterations.

Changes in Version 0.8:
  - The log determinant is now computer better to be able to include fit measures at higher model complexities
  - The 'return_improper' argument in runmodel( ) now returns improper estimates without trying different starting values
  - Fixed a bug in meta_varcov when using individual estimates of the sampling variation
  - Updated optimizer default control parameters

Changes in version 0.7.6:
  - Model estimations that used improper estimation (pseudoinverse of variance-covariance matrix) now return with an error unless return_improper = TRUE in runmodel()
  - Equality-free MIs are now also computed when all edges are included

Changes in version 0.7.5:
  - Fixed a bug with nu_zeta being constrained in multigroup LGC models.
  - factorscores now supports multi group models

Changes in version 0.7.3:
  - Added the 'covariates_as' argument to latentgrowth() to model covariates with regressions (now default) or covariances

Changes in version 0.7.2: